Summary new commit